# singletonset-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: basic.rs
src/: lib.rs
