[package]
name = "singletonset"
version = "0.1.0"
authors = ["Jon Musselwhite"]
categories = ["data-structures"]
description = "This crate provides the `SingletonSet` data structure, which makes it easy to store a single instance each of various types within a single set."
keywords = ["singleton", "data", "structure", "set"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/FlippingBinaryLLC/singletonset-rs"
rust-version = "1.56.1"
edition = "2021"
exclude = [".gitignore", ".github", ".markdownlint.jsonc"]
